--- a/public/tags.yml
+++ b/public/tags.yml
@@ -1,33 +1,33 @@
 win:
-  ['!emacsd']
+  {'!emacsd'}
 mac:
-  ['bsd']
+  {'bsd'}
 freebsd:
-  ['bsd']
+  {'bsd'}
 ubuntu:
-  ['linux', 'aptitude']
+  {'linux', 'aptitude'}
 centos:
-  ['linux', 'yum']
+  {'linux', 'yum'}
 arch:
-  ['linux', 'pacman']
+  {'linux', 'pacman'}
 
 default:
-  ['taskie', 'emacsd']
+  {'private', 'emacsd'}
 
 client:
-  ['default', 'white']
+  {'default', color: 'white'}
 server:
-  ['default', 'black']
+  {'default', color: 'black'}
 
 ubume:
-  ['server', 'ubuntu', 'allsrv', 'magenta']
+  {'server', 'ubuntu', 'allsrv', color: 'magenta'}
 moryo:
-  ['server', 'arch', 'allsrv', 'violet']
+  {'server', 'arch', 'allsrv', color: 'violet'}
 kyokotsu:
-  ['client', 'mac', 'allsrv']
+  {'client', 'mac', 'allsrv'}
 tesso:
-  ['client', 'win', 'allsrv']
+  {'client', 'win', 'allsrv'}
 tessoarch:
-  ['client', 'arch', 'allsrv']
+  {'client', 'arch', 'allsrv'}
 jorogumo:
-  ['server', 'arch', 'allsrv', 'yellow']
+  {'server', 'arch', 'allsrv', color: 'yellow'}
