--- a/public/rules.yml
+++ b/public/rules.yml
@@ -1,55 +1,55 @@
-'~/.bashrc':
+'dst/.bashrc':
   dirs: ['sh.d', 'bash.d']
   pat: '\.sh$'
 
-'~/.config/peco/config.json':
+'dst/.config/peco/config.json':
   dir: 'etc'
-  pat: '^peco.config(?:\.m4)?.json$'
+  pat: '^peco(?:_gtp)?.config.json$'
 
-'~/.gdbinit':
+'dst/.gdbinit':
   dir: 'etc'
   pat: '^gdbinit$'
 
-'~/.gitconfig':
+'dst/.gitconfig':
   dir: 'gitconfig.d'
   pat: '\.conf$'
 
-'~/.gitignore':
+'dst/.gitignore':
   dir: 'etc'
   pat: '^gitignore$'
 
-'~/.gvimrc':
+'dst/.gvimrc':
   dir: 'etc'
   pat: '^gvimrc$'
 
-'~/.nanorc':
+'dst/.nanorc':
   dir: 'etc'
-  pat: '^nanorc(?:\.m4)?$'
+  pat: '^nanorc(?:_gtp)?$'
 
-'~/.npmrc':
+'dst/.npmrc':
   dir: 'etc'
   pat: '^npmrc$'
 
-'~/.screenrc':
+'dst/.screenrc':
   dir: 'etc'
   pat: '^screenrc$'
 
-'~/.ssh/config':
+'dst/.ssh/config':
   dir: 'ssh.config.d'
   pat: '\.conf$'
 
-'~/.tmux.conf':
+'dst/.tmux.conf':
   dir: 'tmux.d'
   pat: '\.conf$'
 
-'~/.vimrc':
+'dst/.vimrc':
   dir: 'vim.d'
   pat: '\.vim$'
 
-'~/.zshrc':
+'dst/.zshrc':
   dirs: ['sh.d', 'zsh.d']
   pat: '\.sh$'
 
-'~/.xstow.ini':
+'dst/.xstow.ini':
   dir: 'etc'
   pat: '^xstow.ini$'
