gitconfig: add aliases

--- a/public/gitconfig.d/alias.conf
+++ b/public/gitconfig.d/alias.conf
@@ -1,14 +1,22 @@
 [alias]
-	a = add
-	f = fetch
-	s = status
-	sh = show
-	ps = push
-	pl = pull
-	c = commit
-	cm = commit -m
+	a  = add
+  br = branch
+	c  = commit
+  c1 = clone --depth 1
 	ca = commit --amend
+  cf = cat-file
+  cl = clone
+	cm = commit -m
 	co = checkout
-	l = log
-	d = diff
+	d  = diff
+	f  = fetch
+	l  = log
+	pl = pull
+	ps = push
+  rp = rev-parse
+  rs = rev-parse --short
+  rt = rev-parse --show-toplevel
+	s  = status
+	sh = show
+  t  = tag
 	tr = log --graph --pretty='format:%C(yellow)%h%Creset %s %Cgreen(%an)%Creset %Cred%d%Creset'
