gitconfig: add git aliases

--- a/public/gitconfig.d/alias.conf
+++ b/public/gitconfig.d/alias.conf
@@ -5,10 +5,17 @@
     c1 = clone --depth 1
     ca = commit --amend
     cf = cat-file
+    ci = commit -a
     cl = clone
     cm = commit -m
     co = checkout
     d  = diff
+    d1 = diff HEAD~
+    d2 = diff HEAD~~
+    d3 = diff HEAD~~~
+    d4 = diff HEAD~~~~
+    d5 = diff HEAD~~~~~
+    d10 = diff HEAD~~~~~~~~~~
     f  = fetch
     l  = log
     pl = pull
@@ -20,3 +27,4 @@
     sh = show
     t  = tag
     tr = log --graph --pretty='format:%C(yellow)%h%Creset %s %Cgreen(%an)%Creset %Cred%d%Creset'
+    wc = whatchanged
