fonts.conf: update

--- a/public/etc/fonts.conf
+++ b/public/etc/fonts.conf
@@ -47,8 +47,11 @@
       <string>Monospace</string>
     </test>
     <edit mode="append" name="family" binding="strong">
+      <string>JetBrains Mono</string>
+      <string>Fira Code</string>
       <string>Inconsolata</string>
-      <string>Ricty</string>
+      <string>M+ 1m</string>
+      <string>Mgen+ 1m</string>
       <string>Migu 1M</string>
     </edit>
   </match>
@@ -57,8 +60,9 @@
       <string>Sans</string>
     </test>
     <edit mode="append" name="family" binding="strong">
-      <string>Ohruri</string>
       <string>M+ 2c</string>
+      <string>Mgen+ 2c</string>
+      <string>Ohruri</string>
       <string>Migu 1C</string>
     </edit>
   </match>
