feat(gitconfig): add alias `d0`

--- a/public/gitconfig.d/alias.conf
+++ b/public/gitconfig.d/alias.conf
@@ -10,6 +10,7 @@
     cm = commit -m
     co = checkout
     d  = diff
+    d0 = diff HEAD
     d1 = diff HEAD~
     d2 = diff HEAD~~
     d3 = diff HEAD~~~
