--- a/public/rules.yml
+++ b/public/rules.yml
@@ -14,6 +14,10 @@
   dir: 'git/config.d'
   pat: '\.conf$'
 
+'distribute/.config/git/ignore':
+  dir: 'git/ignore.d'
+  pat: '\.gitignore$'
+
 'distribute/.gvimrc':
   dir: 'etc'
   pat: '^gvimrc(_.+)?$'
