git: remove -a from alias `ci`

--- a/public/git/config.d/alias.conf
+++ b/public/git/config.d/alias.conf
@@ -5,7 +5,7 @@
     c1 = clone --depth 1
     ca = commit --amend
     cf = cat-file
-    ci = commit -a
+    ci = commit
     cl = clone
     cm = commit -m
     co = checkout
