fix!(tmux): migrate for v2.9

--- a/public/tmux.d/display_gtp.conf
+++ b/public/tmux.d/display_gtp.conf
@@ -2,25 +2,17 @@ set -g status-interval 5
 set -g status-left-length 16
 set -g status-right-length 50
 
-set -g status-bg black
-set -g status-fg {{.color}}
-set -g status-fg {{.color}}
+set -g status-style bg=black,fg={{.color}},fg={{.color}}
 set -g status-left '#[fg={{.color}}]#{?client_prefix,#[reverse],}[#S] #[default]'
 set -g status-right '#[fg={{.color}}]#{?client_prefix,#[reverse],}#H#[default]'
-set -g message-fg white
-set -g message-bg red
+set -g message-style fg=white,bg=red
 
-set -g pane-border-fg {{.color}}
-set -g pane-border-bg black
-set -g pane-active-border-fg {{.color}}
-set -g pane-active-border-bg {{.color}}
+set -g pane-border-style fg={{.color}},bg=black
+set -g pane-active-border-style fg={{.color}},bg={{.color}}
 
-setw -g window-status-current-fg black
-setw -g window-status-current-bg {{.color}}
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=black,bg={{.color}},bright
 
-setw -g mode-bg {{.color}}
-setw -g mode-fg black
+setw -g mode-style bg={{.color}},fg=black
 
 set -g base-index 1
 set-window-option -g pane-base-index 1
