--- a/public/tmux.d/tmuxcolors-dark_disable.conf
+++ b/public/tmux.d/tmuxcolors-dark_disable.conf
@@ -1,27 +1,22 @@
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+set-option -g status-style bg=black,fg=yellow,default
 
 # default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg black
+set-window-option -g window-status-style fg=white,bg=black
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-style fg=black,bg=white
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set-option -g pane-border-style fg=black
+set-option -g pane-active-border-style fg=brightgreen
 
 # message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-style bg=black,fg=brightred
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
