--- a/public/paths.yml
+++ b/public/paths.yml
@@ -1,30 +1,45 @@
-'zsh':
-  type: 'exec'
-'peco':
-  type: 'exec'
-'fzf':
-  type: 'exec'
-'cabal':
-  type: 'exec'
-'go':
-  type: 'exec'
-'delta':
-  type: 'exec'
-'direnv':
-  type: 'exec'
-'ghq':
-  type: 'exec'
-'exa':
-  type: 'exec'
-'ag':
-  type: 'exec'
-'rg':
-  type: 'exec'
-'fd':
-  type: 'exec'
-'home':
-  type: 'env'
-  path: 'HOME'
-'neobundle':
-  type: 'dir'
-  path: '~/.vim/bundle/neobundle.vim'
+zsh:
+  type: exec
+peco:
+  type: exec
+fzf:
+  type: exec
+cabal:
+  type: exec
+go:
+  type: exec
+delta:
+  type: exec
+direnv:
+  type: exec
+ghq:
+  type: exec
+exa:
+  type: exec
+ag:
+  type: exec
+rg:
+  type: exec
+fd:
+  type: exec
+home:
+  type: env
+  path: HOME
+neobundle:
+  type: dir
+  path: ~/.vim/bundle/neobundle.vim
+phpenv:
+  type: dir
+  path: ~/.phpenv
+pyenv:
+  type: dir
+  path: ~/.pyenv
+rbenv:
+  type: dir
+  path: ~/.rbenv
+nvm:
+  type: dir
+  path: ~/.nvm
+cargo:
+  type: dir
+  path: ~/.cargo
