fix!(git): modify aliases

--- a/public/git/config.d/alias.conf
+++ b/public/git/config.d/alias.conf
@@ -19,14 +19,18 @@
     d10 = diff HEAD~~~~~~~~~~
     f  = fetch
     l  = log
+    ll = log --oneline --pretty='format:| `%C(yellow)%h%C(reset)` | %cd | %C(green)%an%C(reset) | %s |' --date='format:%Y-%m-%d %H:%M:%S' --abbrev=8
     m  = merge
     pl = pull
     ps = push
+    rb = rebase
     rp = rev-parse
-    rs = rev-parse --short
-    rt = rev-parse --show-toplevel
+    rs = reset
+    ro = restore
+    ros = restore --source
     s  = status
     sh = show
+    sw = switch
     t  = tag
-    tr = log --graph --pretty='format:%C(yellow)%h%Creset %s %Cgreen(%an)%Creset %Cred%d%Creset'
+    tr = log --graph --pretty='format:%C(yellow)%h%C(reset) %s %C(green)(%an)%C(reset)%C(red)%d%C(reset)' --abbrev=8
     wc = whatchanged
