fix(zsh): add prompt settings

--- a/public/tags.yml
+++ b/public/tags.yml
@@ -14,7 +14,7 @@ arch:
   {'linux', 'pacman'}
 
 default:
-  {'private', 'emacsd'}
+  {'private', 'emacsd', prompt: '%#'}
 
 client:
   {color: 'white'}
