feat(tmux): increase history-limit

--- a/public/tmux.d/00-base_gtp.conf
+++ b/public/tmux.d/00-base_gtp.conf
@@ -6,6 +6,8 @@ set-window-option -g pane-base-index 1
 
 set-option -g renumber-windows on
 
+set-option -g history-limit 100000
+
 {{if .zsh}}
 set -g default-shell {{.zsh}}
 set -g default-command {{.zsh}}
