feat(bin): add git-wta

--- a/public/git/config.d/alias.conf
+++ b/public/git/config.d/alias.conf
@@ -35,3 +35,5 @@
     t  = tag
     tr = log --graph --pretty='format:%C(yellow)%h%C(reset) %s %C(green)(%an)%C(reset)%C(red)%d%C(reset)' --abbrev=8
     wc = whatchanged
+    wt = worktree
+    wtl = worktree list
